src/test/scala/com/hmemcpy/metallurgy/compat/scala3/typeInference/Scala3UniversalApplyMethodCompatTest.scala
package com.hmemcpy.metallurgy.compat.scala3.typeInference

import com.hmemcpy.metallurgy.compat.scala3.Scala3CompatTestCase

/** Verbatim port of the bundled Scala plugin's `Scala3UniversalApplyMethodTest`. Snippets are kept exactly; only the
  * asserting base class differs. The `<error descr="...">` markup is validated by `testHighlighting`, so these cases
  * assert the exact rendered error text, not merely the presence of an error.
  */
final class Scala3UniversalApplyMethodCompatTest extends Scala3CompatTestCase:

  def testSimpleScalaClass(): Unit = checkTextHasNoErrors(
    """
      |class A(i: Int)
      |
      |object Test {
      |  val a: A = A(123)
      |}
      |""".stripMargin
  )

  def testSimpleScalaClassTypeMismatch(): Unit = checkTextHasNoErrors(
    s"""
       |class A(i: Int)
       |
       |object Test {
       |  val a: A = A(${withTypeMismatchError("true", expected = "Int", actual = "Boolean")})
       |}
       |""".stripMargin
  )

  def testSimpleScalaClassTooFewArguments(): Unit = checkTextHasNoErrors(
    s"""
       |class A(i: Int, s: String)
       |
       |object Test {
       |  val a: A = A${withError("()", "Unspecified value parameters: i: Int, s: String")}
       |}
       |""".stripMargin
  )

  def testSimpleScalaClassTooManyArguments(): Unit = checkTextHasNoErrors(
    s"""
       |class A
       |
       |object Test {
       |  val a: A = A${withError("(1", "Too many arguments for method A")}, true)
       |}
       |""".stripMargin
  )

  def testWithCompanionObject(): Unit = checkTextHasNoErrors(
    """
      |class A(i: Int)
      |object A {}
      |
      |object Test {
      |  val a: A = A(213)
      |}
      |""".stripMargin
  )

  def testWithCompanionObjectTypeMismatch(): Unit = checkTextHasNoErrors(
    s"""
       |class A(i: Int)
       |object A {}
       |
       |object Test {
       |  val a: A = A(${withTypeMismatchError("true", expected = "Int", actual = "Boolean")})
       |}
       |""".stripMargin
  )

  def testAlreadyHasApply(): Unit = checkHasErrorAroundCaret(
    s"""
       |class A(i: Int)
       |object A { def apply(): A = ??? }
       |
       |object Test {
       |  val a = A$CARET(123)
       |}
       |""".stripMargin
  )

  def testJavaClass(): Unit = checkTextHasNoErrors(
    """
      |object Test {
      |  val a = java.lang.String("123")
      |  val b = String("123")
      |}
      |""".stripMargin
  )

  def testJavaClassOverloaded(): Unit = checkTextHasNoErrors(
    s"""
       |object Test {
       |  val a = java.lang.${withError("String", "Cannot resolve overloaded method 'String'")}("123", 4, 5)
       |  val a2 = ${withError("String", "Cannot resolve overloaded method 'String'")}("123", 4, 5)
       |}
       |""".stripMargin
  )

  def testApplyOnValueOfCompanionlessClass(): Unit = checkTextHasNoErrors(
    s"""
       |class Foo(x: Int)
       |object Foo
       |
       |object Test {
       |  val z = Foo
       |  def zz = Foo
       |
       |  z(1)
       |  zz(2)
       |  val xx = StringBuilder()
       |  xx.append(true)
       |}
       |""".stripMargin
  )

  def testWithTypeParameters(): Unit = checkTextHasNoErrors(
    """
      |class Foo[A, B](a: A, b: B)
      |
      |object Test {
      |  val foo = Foo[Int, String](1213, "213")
      |  val foo2: Foo[Double, Long] = Foo(1d, 2l)
      |}
      |""".stripMargin
  )

  def testWithTypeParametersTypeMismatch(): Unit = checkTextHasNoErrors(
    s"""
       |class Foo[A, B](a: A, b: B)
       |
       |object Test {
       |  val foo = Foo[String, Int](${withTypeMismatchError("1213", expected = "String", actual = "Int")}, 'c')
       |  val foo2: Foo[Boolean, Float] = Foo(false, ${withTypeMismatchError(
        "List.empty[String]",
        expected = "Float",
        actual = "List[String]"
      )})
       |}
       |""".stripMargin
  )

  def testExplicitApply(): Unit = checkTextHasNoErrors(
    """
      |class A(i: Int)
      |
      |object Test {
      | val a = A.apply(123)
      |}
      |""".stripMargin
  )

  def testExplicitApplyTypeMismatch(): Unit = checkTextHasNoErrors(
    s"""
       |class A(i: Int)
       |
       |object Test {
       | val a = A.apply(${withTypeMismatchError("12d", expected = "Int", actual = "Double")})
       |}
       |""".stripMargin
  )

  def testJavaWithTypeParameters(): Unit = checkTextHasNoErrors(
    """
      |object Test {
      |  val col: java.util.Collection[String] = ???
      |  val opt: java.util.Set[String] = java.util.HashSet[String](col)
      |}
      |
      |""".stripMargin
  )

  def testJavaWithTypeParametersTypeMismatch(): Unit = checkTextHasNoErrors(
    s"""
       |object Test {
       |  val col: java.util.Collection[String] = ???
       |  val opt: java.util.Set[String] =
       |    java.util.HashSet[String](${withTypeMismatchError(
        "col",
        expected = "Int",
        actual = "util.Collection[String]"
      )}, col)
       |}
       |
       |""".stripMargin
  )

  def testAccessibility(): Unit = checkHasErrorAroundCaret(
    s"""
       |class Foo private(i: Int)
       |
       |object Test {
       |  val f = F${CARET}oo(123)
       |}
       |""".stripMargin
  )

  def testSecondaryConstructor(): Unit = checkTextHasNoErrors(
    """
      |class Foo(i: Int) {
      |  def this(s: String) = this(123)
      |}
      |
      |object Test {
      |  val foo1: Foo = Foo(123)
      |  val foo2: Foo = Foo("123")
      |}
      |""".stripMargin
  )

  def testReferencingApply(): Unit = checkTextHasNoErrors(
    """
      |class Test(i: Int)
      |
      |object Foo {
      |  def app = Test.apply
      |}
      |""".stripMargin
  )

  def testTypeOfApply(): Unit = assertExprType(
    s"""
       |class Test(i: Int)
       |
       |object Foo {
       |  ${START}Test.apply$END
       |}
       |//Int => Test
       |""".stripMargin
  )

  private def withError(text: String, description: String): String =
    s"""<error descr="$description">$text</error>"""

  private def withTypeMismatchError(text: String, expected: String, actual: String): String =
    withError(text, s"Type mismatch, expected: $expected, actual: $actual")
